--- a/domain/pubspec.yaml
+++ b/domain/pubspec.yaml
@@ -11,10 +11,17 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_riverpod: ^2.4.9
+  universal_io: ^2.2.2
+  rxdart: ^0.27.7
+  freezed_annotation: ^2.4.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  build_runner: ^2.4.7
+  freezed: ^2.4.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
